--- a/_includes/social.liquid
+++ b/_includes/social.liquid
@@ -131,3 +131,6 @@
   </div>
   {% include scripts/wechatModal.liquid %}
 {% endif %}
+{% if site.laborunion %}
+  <a href="{{ site.laborunion }}" title="UMD Graduate Labor Union"><img src="{{ site.baseurl }}/assets/img/icons/GLU_Logo_BW.png"\></a>
+{% endif %}
