realigning the UMD-GLU icon

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,6 +27,6 @@ $max-content-width: {{ site.max_width }};
 .custom-icon {
   width: 72px; /* Adjust to match Font Awesome size */
   height: 72px; /* Ensure aspect ratio is consistent */
-  vertical-align: middle; /* Aligns it with Font Awesome icons */
+  vertical-align: super; /* Aligns it with Font Awesome icons */
   display: inline-block;
 }
