--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -205,8 +205,8 @@
           <a href="{{ entry.html | prepend: '/assets/html/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
         {% endif %}
       {% endif %}
-      {% if entry.publishedVersion %}
-        <a href="https://doi.org/{{ entry.doi }}" class="btn btn-sm z-depth-0" role="button">Publisher</a> 
+      {% if entry.published_version and entry.doi %}
+          <a href="https://doi.org/{{ entry.doi }}" class="btn btn-sm z-depth-0" role="button">Published</a>
       {% endif %}
       {% if entry.pdf %}
         {% if entry.pdf contains '://' %}
