--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -205,6 +205,9 @@
           <a href="{{ entry.html | prepend: '/assets/html/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
         {% endif %}
       {% endif %}
+      {% if entry.publication_status %}
+	  <a href="" class="btn btn-sm z-depth-0" role="button">{{ entry.publication_status }}</a>
+      {% endif %}
       {% if entry.published_version and entry.doi %}
           <a href="https://doi.org/{{ entry.doi }}" class="btn btn-sm z-depth-0" role="button">Published</a>
       {% endif %}
